// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayInputWithMultiSelect renders 1`] = `
<div
  className="form-group"
>
  <div
    className="input-group input-group-stacked-sm-down"
  >
    <div
      className="input-group-item"
    >
      <div
        className="form-control form-control-tag-group"
        onKeyDown={[Function]}
      >
        <input
          className="form-control-inset"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onPaste={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayInputWithMultiSelect renders as not valid 1`] = `
<div
  className="form-group has-error"
>
  <div
    className="input-group input-group-stacked-sm-down"
  >
    <div
      className="input-group-item"
    >
      <div
        className="form-control form-control-tag-group"
        onKeyDown={[Function]}
      >
        <span
          className="label label-dismissible label-secondary"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="label-item label-item-expand"
          >
            foo
          </span>
          <span
            className="label-item label-item-after"
          >
            <button
              className="close"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlinkHref="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          name=""
          type="hidden"
          value="foo"
        />
        <span
          className="label label-dismissible label-secondary"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="label-item label-item-expand"
          >
            bar
          </span>
          <span
            className="label-item label-item-after"
          >
            <button
              className="close"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlinkHref="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          name=""
          type="hidden"
          value="bar"
        />
        <span
          className="label label-dismissible label-secondary"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="label-item label-item-expand"
          >
            baz
          </span>
          <span
            className="label-item label-item-after"
          >
            <button
              className="close"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlinkHref="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          name=""
          type="hidden"
          value="baz"
        />
        <input
          className="form-control-inset"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onPaste={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="form-feedback-group"
      >
        <div
          className="form-feedback-item"
        >
          <span
            className="form-feedback-indicator"
          >
            <svg
              className="lexicon-icon lexicon-icon-info-circle"
              role="presentation"
            >
              <use
                xlinkHref="/foo/bar#info-circle"
              />
            </svg>
          </span>
          WRONG
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayInputWithMultiSelect renders with items 1`] = `
<div
  className="form-group"
>
  <div
    className="input-group input-group-stacked-sm-down"
  >
    <div
      className="input-group-item"
    >
      <div
        className="form-control form-control-tag-group"
        onKeyDown={[Function]}
      >
        <span
          className="label label-dismissible label-secondary"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="label-item label-item-expand"
          >
            foo
          </span>
          <span
            className="label-item label-item-after"
          >
            <button
              className="close"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlinkHref="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          name=""
          type="hidden"
          value="foo"
        />
        <span
          className="label label-dismissible label-secondary"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="label-item label-item-expand"
          >
            bar
          </span>
          <span
            className="label-item label-item-after"
          >
            <button
              className="close"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlinkHref="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          name=""
          type="hidden"
          value="bar"
        />
        <span
          className="label label-dismissible label-secondary"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="label-item label-item-expand"
          >
            baz
          </span>
          <span
            className="label-item label-item-after"
          >
            <button
              className="close"
              onClick={[Function]}
              type="button"
            >
              <svg
                className="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlinkHref="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          name=""
          type="hidden"
          value="baz"
        />
        <input
          className="form-control-inset"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onPaste={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
